# RouteSage

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api.md  complex_fastapi_example_20250514_175037.md
src/routesage/: __init__.py
src/routesage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/routesage/cli/: __init__.py  main.py
src/routesage/core/: __init__.py  analyzer.py  cache.py  config.py  llm.py  models.py  rate_limiter.py  transformer.py
src/routesage/export/: __init__.py  json_exporter.py  markdown_exporter.py
src/routesage/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  openai_provider.py
src/routesage/tests/: test_verification.py
src/routesage/utils/: __init__.py  logger.py
tests/: test.py
